10/26/2005 Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug in the caching process that caused fatal IOExceptions to be
      thrown.

10/25/2005 Ian Lewis <IanLewis@member.fsf.org>

    * Updated the about dialog to get it's messages in a locale specific way.
      Now the about dialog can be displayed in other languages.
    * Added support for caching external files to the disk in the user's
      settings directory. This should make load times faster for files with a
      lot of external files. jsXe now requires the commons xml-commons resolver
      jar file.

10/24/2005 Ian Lewis <IanLewis@member.fsf.org>

    * Updated how the splash screen gets updated on startup to make it
      more active.
    * Updated the activity log dialog to display the label as well as
      the close/ok button better. Fixed the loading and saving of the geometry.
      Added a default size to the default properties so that it doesn't
      have a tiny size the first time it's opened.

07/12/2005 Trish Hartnett <trishah136@users.sourceforge.net>
	* Updated javadoc for ProgresSplashScreenWindow
	
07/09/2005 Trish Hartnett <trishah136@users.sourceforge.net>
	* Added splash screen for jsXE startup
	* Changed format of Activity Log Dialog so that buttons were arranged neater.

07/02/2005  Trish Hartnett <trishah136@users.sourceforge.net>
	* Added Activity Log menu option to the Help menu
	* Edited jsXe so that when the DirtyFilesDialog appears, it's sized correctly

07/01/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Released version 0.4pre2

06/29/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Made some changes suggested by FindBugs.

06/28/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Modified the DirtyFilesDialog to make it look a little bit better.
        * Changed to use the BorderLayout better
        * Changed to allow the JList to size itself correctly
        * Changed from using 3 JPanels to using 1 and using the BorderLayout to